[project]
name = "reserve"
version = "0.1.0"
description = "Simple Django Project for booking table in resturant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "django-redis>=5.4.0",
    "djangorestframework>=3.15.2",
    "pydantic>=2.10.6",
    "redis>=5.2.1",
]
